tests/baselines/reference/defaultIsNotVisibleInLocalScope.errors.txt
tests/cases/compiler/a.ts(4,24): error TS2304: Cannot find name 'default'.
tests/cases/compiler/b.ts(2,24): error TS2304: Cannot find name 'default'.


==== tests/cases/compiler/a.ts (1 errors) ====
    export default function () {
        return true;
    }
    export type X = typeof default;  // expect error
                           ~~~~~~~
!!! error TS2304: Cannot find name 'default'.
    
==== tests/cases/compiler/b.ts (1 errors) ====
    export default { a: true }
    export type X = typeof default; // expect error
                           ~~~~~~~
!!! error TS2304: Cannot find name 'default'.